--- a/styles/footer.css
+++ b/styles/footer.css
@@ -77,9 +77,18 @@
 }
 
 #Subscribe {
+    width: 50%;
     margin-top: 10px;
     color: white;
     background-color: #475d4b;
     padding: 5px 20px 5px 20px;
     border-color: transparent;
+    border-radius: 0;
+}
+
+#NewsletterForm--footer {
+    width: 100%;
+    height: 30px;
+    text-align: center;
+    padding: 20px;
 }
