--- a/luxury/luxury.css
+++ b/luxury/luxury.css
@@ -209,6 +209,30 @@ button{
 
 /* media queries */
 
+  /* for large screen */
+
+@media all and (min-width:1024px){
+    .container{
+        width:95%;
+    }
+    .seller_section{
+       width:95%;
+       flex-wrap: wrap;
+    }
+    .seller_section>div{
+        width:24%;
+     }
+     #perfume_box{
+        width:95%;
+        grid-template-columns: repeat(5,1fr);
+        grid-template-rows: auto;
+        gap:20px;
+    }
+    .video_container{
+        width:95%;
+       }
+}
+
       /* for medium screens */
 
 @media all and (min-width:768px) and (max-width:1024px){
@@ -216,7 +240,27 @@ button{
     .container{
         width:95%;
     }
+    .container>img{
+        height: 300px;
+    }
+    .seller_section{
+       width:95%;
+       flex-wrap: wrap;
+    }
+    .seller_section>div{
+        width:48%;
+     }
+     #perfume_box{
+        width:95%;
+        grid-template-columns: repeat(4,1fr);
+        grid-template-rows: auto;
+        gap:20px;
+    }
+    .video_container{
+        width:95%;
+       }
 
+    
 }
      
 
@@ -228,5 +272,29 @@ button{
 
 @media all and (min-width:320px) and (max-width:767px){
 
+    .container{
+        width:95%;
+    }
+    .container>img{
+        height: 350px;
+    }
+    .seller_section{
+       width:95%;
+       flex-wrap: wrap;
+    }
+    .seller_section>div{
+        width:98%;
+     }
+
+   #perfume_box{
+        width:95%;
+        grid-template-columns: repeat(2,1fr);
+        grid-template-rows: auto;
+        gap:20px;
+    }
+    .video_container{
+        width:95%;
+       }
+  
 }
 
