--- a/Bestseller/bestseller.css
+++ b/Bestseller/bestseller.css
@@ -13,9 +13,16 @@
 }
 
 #dummy_sv {
-    width: 20%;
+    width: 18%;
     /* border: 1px solid pink; */
     margin-top: 50px;
+    margin-left: 10px;
+    padding: 10px;
+    border: 3px solid blue;
+    border-radius: 15px;
+    height: 600px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+    background-color: rgb(213, 213, 224);
 }
 
 #details_sv {
@@ -24,12 +31,6 @@
     margin-top: 50px;
 }
 
-#dummy_sv>div {
-    /* border: 1px solid teal; */
-    width: 95%;
-    margin: auto;
-    /* height: 400px; */
-}
 
 #dummy_sv>div>h4:nth-child(1) {
     margin-bottom: 10px;
@@ -47,7 +48,7 @@
 #dummy_sv>div>p {
     margin-bottom: 15px;
     margin-top: 15px;
-    color: grey;
+    color: rgb(232, 102, 102);
     font-size: 14px;
 }
 
