--- a/Body Care/Body Care.css
+++ b/Body Care/Body Care.css
@@ -13,9 +13,16 @@
 }
 
 #dummy_sv {
-    width: 20%;
+    width: 18%;
     /* border: 1px solid pink; */
     margin-top: 50px;
+    margin-left: 10px;
+    padding: 10px;
+    border: 3px solid blue;
+    border-radius: 15px;
+    height: 600px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+    background-color: rgb(213, 213, 224);
 }
 
 #details_sv {
