--- a/styles/infosidebar.css
+++ b/styles/infosidebar.css
@@ -43,33 +43,40 @@
     margin-top: 40px;
     margin-bottom: 60px;
 }
-#sidebar div:nth-child(2) div
+#sidebar div:nth-child(2) >div
 {
    width: 50%;
-   height: 400px;
+   height: 800px;
    margin-top: 60px;
+   /* border: 4px solid red; */
 }
-#sidebar div:nth-child(2) div h1
+#sidebar div:nth-child(2) >div h1
 {
    text-align: center;
    margin-bottom: 40px;
    font-weight: 500;
    color: rgb(63, 58, 58);
 }
-#sidebar div:nth-child(2) div p
+#sidebar div:nth-child(2) >div p
 {
    margin-top: 20px;
    margin-bottom: 20px;
-   word-spacing: 30px;
+   /* word-spacing: 60px; */
    font-weight: 500;
 }
-#sidebar div:nth-child(2) div button
+#sidebar div:nth-child(2) >div button
 {
    margin-top: 0px;
    margin-bottom: 20px;
-   width: 60px;
+   width: 100px;
    height: 40px;
    background-color: #e5f0da;
    font-weight: 700;
+   margin-top: 10px;
+   text-align: center;
+   background-color:  #475d4b;
+   color: white;
+   padding-left: 0px;
 }
+
 
