--- a/styles/login.css
+++ b/styles/login.css
@@ -6,15 +6,29 @@
 }
 #login{
     width: 35%;
-    height: 400px;
+    height: 450px;
     margin: auto;
     /* border: 4px solid red; */
     text-align: center;
     margin-top: 70px;
+    margin-bottom: 0px;
+    padding: 10px;
 }
 #login p{
     font-size: 20px;
 }
+#first a{
+    color: gray;
+}
+
+#create a{
+    color: gray;
+}
+#Signup {
+    /* color: gray; */
+    margin-bottom: 30px;
+}
+
 
 #login h1{
     margin-bottom: 20px;
