--- a/Build A Box/Build.css
+++ b/Build A Box/Build.css
@@ -3,7 +3,6 @@
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-
 #container {
     display: flex;
     width: 100%;
@@ -26,12 +25,11 @@
 }
 
 #info {
-    border: 1px solid red;
+    /* border: 1px solid red; */
     width: 50%;
     height: 400px;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
     padding: 20px;
-
 }
 
 h3 {
@@ -41,7 +39,6 @@ h3 {
     font-weight: 600;
     text-transform: capitalize;
     margin-top: 20px;
-
 }
 
 p {
@@ -58,7 +55,6 @@ p {
 }
 
 button {
-
     margin-bottom: 10px;
     width: 30%;
     padding: 5px;
@@ -71,7 +67,6 @@ button {
     cursor: pointer;
     padding: 5px;
     margin-top: 20px;
-
 }
 
 button:hover {
