--- a/styles/Cartdiv1.css
+++ b/styles/Cartdiv1.css
@@ -1,12 +1,17 @@
 #fix{
-    position: sticky;
-    height: 250px;
+    position:sticky;
+    height: 230px;
+    bottom: 0px;
+    background-color: white;
+    /* margin-top: 10px; */
+    /* border: 4px solid blue; */
 }
 #fix>div{
     display: flex;
     /* border: 4px solid red; */
     justify-content: space-between;
     margin-top: 6px;
+    /* position: relative; */
 }
 #fix >p{
     margin-top: 6px;
