--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -468,6 +468,20 @@ li {
     border: 1px solid black;
 }
 
+#count1 {
+    position: absolute;
+    width: 18px;
+    color: black;
+    background-color: white;
+    border-radius: 50%;
+    padding: 1px;
+    text-align: center;
+    font-size: 10px;
+    top: 116px;
+    right: 122px;
+    border: 1px solid black;
+}
+
 .fa-bag-shopping {
     position: relative;
     color: #000;
